--- a/form_page.html
+++ b/form_page.html
@@ -3,19 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<h1>
+<h1 class = "thename">
     Brow-студия Hollywood Brows
 </h1>
-<h2>Окрашивание бровей</h2>
-<p>Подходит тем, кто желает изменить тон бровей: сделать поярче или восполнить недостающую густоту..</p>
-<h2>Коррекция бровей</h2>
-<p>Подходит для тех, кому нужно поддерживать уже готовую форму бровей..</p>
-<h2>Ламинирование бровей</h2>
-<p>Подходит как обладательницам непослушных и достаточно жестких волосков бровей,
-    так и тем, кто имеет узкую форму бровей и хочет сделать их шире, придать объем.</p>
-<table border="1">
+<h1 align="center">Наши услуги</h1>
+<div class = "cards">
+    <div class="card">
+        <h2>Окрашивание бровей краской / хной</h2>
+        <img src="https://i.pinimg.com/564x/fd/0b/c2/fd0bc29a0fc0a05eaada798f709ed658.jpg" width = "280"  alt="картинка" />
+        <p>Подходит тем, кто желает изменить тон бровей: сделать поярче или восполнить недостающую густоту..</p>
+        <p class = "price"><strong>от 600 рублей</strong></p>
+    </div>
+
+    <div class="card">
+        <h2>Коррекция бровей</h2>
+        <img src="https://i.pinimg.com/564x/e5/ae/5b/e5ae5b23391b42c8adfee3c82c5ca6a5.jpg" width = "280" height = "300"  alt="картинка" />
+        <p>Подходит для тех, кому нужно поддерживать уже готовую форму бровей..</p>
+        <p class = "price"><strong>от 300 рублей</strong></p>
+    </div>
+
+
+    <div class="card">
+        <h2>Ламинирование бровей</h2>
+        <img src="https://i.pinimg.com/564x/a2/81/e6/a281e6aac93cd6510c2f19df1021ae63.jpg" width = "280" height = "300" alt="картинка" />
+        <p>Подходит как обладательницам непослушных и достаточно жестких волосков бровей,
+            так и тем, кто имеет узкую форму бровей и хочет сделать их шире, придать объем.</p>
+        <p class = "price"><strong>от 1000 рублей</strong></p>
+    </div>
+
+</div>
+<h2 align="center" >График работы наших мастеров</h2>
+<table border="1" class = "table">
     <thead>
     <tr>
         <th>День недели</th>
