--- a/form_page.html
+++ b/form_page.html
@@ -9,6 +9,14 @@
 <h1 class = "thename">
     Brow-студия Hollywood Brows
 </h1>
+<p>Студия бровей Hollywood Brows - это место, где можно получить профессиональный уход и оформление своих бровей.
+    В студии работают специалисты, обладающие опытом и навыками в области визажа и бровистики, которые помогут
+    вам создать идеальную форму бровей, подходящую именно вам.</p>
+<p>Один из главных преимуществ нашей студии - индивидуальный подход к каждому клиенту. Мастер уделяет
+    внимание вашим пожеланиям и учитывает особенности вашего лица, чтобы создать наиболее гармоничное сочетание
+    между формой и цветом бровей и остальными чертами лица.</p>
+<p>С использованием высококачественных косметических продуктов и инструментов наши мастера
+    достигают наилучших результатов во время процесса оформления бровей. </p>
 <h1 align="center">Наши услуги</h1>
 <div class = "cards">
     <div class="card">
