--- a/form_page.html
+++ b/form_page.html
@@ -9,26 +9,31 @@
 <h1 class = "thename">
     Brow-студия Hollywood Brows
 </h1>
-<p>Студия бровей Hollywood Brows - это место, где можно получить профессиональный уход и оформление своих бровей.
+<hr>
+<div class = 'descr' align = 'center'>
+    <h2 align="center" >О нас</h2>
+    <p class = "description">Студия бровей Hollywood Brows - это место, где можно получить профессиональный уход и оформление своих бровей.
     В студии работают специалисты, обладающие опытом и навыками в области визажа и бровистики, которые помогут
     вам создать идеальную форму бровей, подходящую именно вам.</p>
-<p>Один из главных преимуществ нашей студии - индивидуальный подход к каждому клиенту. Мастер уделяет
+    <p class = "description">Один из главных преимуществ нашей студии - индивидуальный подход к каждому клиенту. Мастер уделяет
     внимание вашим пожеланиям и учитывает особенности вашего лица, чтобы создать наиболее гармоничное сочетание
     между формой и цветом бровей и остальными чертами лица.</p>
-<p>С использованием высококачественных косметических продуктов и инструментов наши мастера
+    <p class = "description">С использованием высококачественных косметических продуктов и инструментов наши мастера
     достигают наилучших результатов во время процесса оформления бровей. </p>
+</div>
+<hr>
 <h1 align="center">Наши услуги</h1>
 <div class = "cards">
     <div class="card">
         <h2>Окрашивание бровей краской / хной</h2>
-        <img src="https://i.pinimg.com/564x/fd/0b/c2/fd0bc29a0fc0a05eaada798f709ed658.jpg" width = "280"  alt="картинка" />
+        <img class = "image-card" src="https://i.pinimg.com/564x/fd/0b/c2/fd0bc29a0fc0a05eaada798f709ed658.jpg" width = "280" height="280"  alt="картинка" />
         <p>Подходит тем, кто желает изменить тон бровей: сделать поярче или восполнить недостающую густоту..</p>
         <p class = "price"><strong>от 600 рублей</strong></p>
     </div>
 
     <div class="card">
         <h2>Коррекция бровей</h2>
-        <img src="https://i.pinimg.com/564x/e5/ae/5b/e5ae5b23391b42c8adfee3c82c5ca6a5.jpg" width = "280" height = "300"  alt="картинка" />
+        <img class = "image-card" src="https://i.pinimg.com/564x/e5/ae/5b/e5ae5b23391b42c8adfee3c82c5ca6a5.jpg" width = "280" height = "300"  alt="картинка" />
         <p>Подходит для тех, кому нужно поддерживать уже готовую форму бровей..</p>
         <p class = "price"><strong>от 300 рублей</strong></p>
     </div>
@@ -36,7 +41,7 @@
 
     <div class="card">
         <h2>Ламинирование бровей</h2>
-        <img src="https://i.pinimg.com/564x/a2/81/e6/a281e6aac93cd6510c2f19df1021ae63.jpg" width = "280" height = "300" alt="картинка" />
+        <img class = "image-card" src="https://i.pinimg.com/564x/a2/81/e6/a281e6aac93cd6510c2f19df1021ae63.jpg" width = "280" height = "300" alt="картинка" />
         <p>Подходит как обладательницам непослушных и достаточно жестких волосков бровей,
             так и тем, кто имеет узкую форму бровей и хочет сделать их шире, придать объем.</p>
         <p class = "price"><strong>от 1000 рублей</strong></p>
