--- a/form_page.html
+++ b/form_page.html
@@ -29,6 +29,9 @@
         <img class = "image-card" src="https://i.pinimg.com/564x/fd/0b/c2/fd0bc29a0fc0a05eaada798f709ed658.jpg" width = "280" height="280"  alt="картинка" />
         <p>Подходит тем, кто желает изменить тон бровей: сделать поярче или восполнить недостающую густоту..</p>
         <p class = "price"><strong>от 600 рублей</strong></p>
+        <div class="btn-keeper">
+            <a class = "btn" href = '#'>Записаться</a>
+        </div>
     </div>
 
     <div class="card">
@@ -36,6 +39,9 @@
         <img class = "image-card" src="https://i.pinimg.com/564x/e5/ae/5b/e5ae5b23391b42c8adfee3c82c5ca6a5.jpg" width = "280" height = "300"  alt="картинка" />
         <p>Подходит для тех, кому нужно поддерживать уже готовую форму бровей..</p>
         <p class = "price"><strong>от 300 рублей</strong></p>
+        <div class="btn-keeper">
+            <a class = "btn" href = '#'>Записаться</a>
+        </div>
     </div>
 
 
@@ -45,6 +51,9 @@
         <p>Подходит как обладательницам непослушных и достаточно жестких волосков бровей,
             так и тем, кто имеет узкую форму бровей и хочет сделать их шире, придать объем.</p>
         <p class = "price"><strong>от 1000 рублей</strong></p>
+        <div class="btn-keeper">
+            <a class = "btn" href = '#'>Записаться</a>
+        </div>
     </div>
 
 </div>
