--- a/form_page.html
+++ b/form_page.html
@@ -57,7 +57,7 @@
     </div>
 
 </div>
-<h2 align="center" >График работы наших мастеров</h2>
+<h2 align="center" >График работы наших мастеров на следующие 3 дня</h2>
 <table border="1" class = "table">
     <thead>
     <tr>
