--- a/form_page.html
+++ b/form_page.html
@@ -30,7 +30,7 @@
         <p>Подходит тем, кто желает изменить тон бровей: сделать поярче или восполнить недостающую густоту..</p>
         <p class = "price"><strong>от 600 рублей</strong></p>
         <div class="btn-keeper">
-            <a class = "btn" href = '#'>Записаться</a>
+            <a class = "btn" href = 'main_page.html'>Записаться</a>
         </div>
     </div>
 
@@ -40,7 +40,7 @@
         <p>Подходит для тех, кому нужно поддерживать уже готовую форму бровей..</p>
         <p class = "price"><strong>от 300 рублей</strong></p>
         <div class="btn-keeper">
-            <a class = "btn" href = '#'>Записаться</a>
+            <a class = "btn" href = 'main_page.html'>Записаться</a>
         </div>
     </div>
 
@@ -52,12 +52,12 @@
             так и тем, кто имеет узкую форму бровей и хочет сделать их шире, придать объем.</p>
         <p class = "price"><strong>от 1000 рублей</strong></p>
         <div class="btn-keeper">
-            <a class = "btn" href = '#'>Записаться</a>
+            <a class = "btn" href = 'main_page.html'>Записаться</a>
         </div>
     </div>
 
 </div>
-<h2 align="center" >График работы наших мастеров на следующие 3 дня</h2>
+<h2 align="center" >График работы наших мастеров на следующие 3 дня:</h2>
 <table border="1" class = "table">
     <thead>
     <tr>
