--- a/main_page.html
+++ b/main_page.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="/style1.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<form action=# method="post">
+<a href="form_page.html" class="home">Вернуться на главную</a>
+<form action=# method="post" class="clientForm">
     <div class="contact-form">
         <h1>Записаться онлайн</h1>
         <p>Заполните форму - и мы с вами свяжемся</p>
-        <hr>
-
+        <hr color="#edb9b9">
+        <br>
         <label for="clientName">Ваше имя:</label>
         <input type="text" id="clientName" name="clientName" required>
         <br>
@@ -18,10 +20,13 @@
         <label for="phoneNumber">Номер телефона:</label>
         <input type="tel" placeholder="+1 (XX) XXX-XX-XX" name="phoneNumber" id="phoneNumber" required>
         <br>
-        <p>Название процедуры:</p>
+        <p>Выберите процедуру:</p>
         <input type="radio" value=“1” id = 'first' name=“myRadio”><label for= "first">Оформление бровей краска</label>
+        <br>
         <input type="radio" value=“2” id = 'second' name=“myRadio”><label for= "second">Оформление бровей хна</label>
+        <br>
         <input type="radio" value=“3” id = 'third' name=“myRadio”><label for= "third">Ламинирование бровей</label>
+        <br>
         <input type="radio" value=“4” id = 'fourth' name=“myRadio”><label for= "fourth">Коррекция бровей</label>
         <br> <br>
         <label for="masterList">Мастер:</label>
@@ -32,8 +37,7 @@
             <option>Виктория</option>
             <option>Не знаю</option>
         </select>
-        <p>*график работы мастеров можно посмотреть <a class = "btn" href = '#'>здесь</a></p>
-        <br><br>
+        <p class="comments">*график работы мастеров можно посмотреть <a class = "btn" href = '#'>здесь</a></p>
         <label for="weekdays">День недели:</label>
         <select id="weekdays" multiple>
             <option>Понедельник</option>
