--- a/form_page.html
+++ b/form_page.html
@@ -3,140 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="/style.css" rel="stylesheet" type="text/css">
+    <link href="/style1.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<h1 class = "thename">
-    Brow-студия Hollywood Brows
-</h1>
-<hr>
-<div class = 'descr' align = 'center'>
-    <h2 align="center" >О нас</h2>
-    <p class = "description">Студия бровей Hollywood Brows - это место, где можно получить профессиональный уход и оформление своих бровей.
-    В студии работают специалисты, обладающие опытом и навыками в области визажа и бровистики, которые помогут
-    вам создать идеальную форму бровей, подходящую именно вам.</p>
-    <p class = "description">Один из главных преимуществ нашей студии - индивидуальный подход к каждому клиенту. Мастер уделяет
-    внимание вашим пожеланиям и учитывает особенности вашего лица, чтобы создать наиболее гармоничное сочетание
-    между формой и цветом бровей и остальными чертами лица.</p>
-    <p class = "description">С использованием высококачественных косметических продуктов и инструментов наши мастера
-    достигают наилучших результатов во время процесса оформления бровей. </p>
-</div>
-<hr>
-<h1 align="center">Наши услуги</h1>
-<div class = "cards">
-    <div class="card">
-        <h2>Окрашивание бровей краской / хной</h2>
-        <img class = "image-card" src="https://i.pinimg.com/564x/fd/0b/c2/fd0bc29a0fc0a05eaada798f709ed658.jpg" width = "280" height="280"  alt="картинка" />
-        <p>Подходит тем, кто желает изменить тон бровей: сделать поярче или восполнить недостающую густоту..</p>
-        <p class = "price"><strong>от 600 рублей</strong></p>
-        <div class="btn-keeper">
-            <a class = "btn" href = 'main_page.html'>Записаться</a>
-        </div>
+<a href="main_page.html" class="home">Вернуться на главную</a>
+<form action=# method="post" class="clientForm">
+    <div class="contact-form">
+        <h1>Записаться онлайн</h1>
+        <p>Заполните форму - и мы с вами свяжемся</p>
+        <hr color="#edb9b9">
+        <br>
+        <label for="clientName">Ваше имя:</label>
+        <input type="text" id="clientName" name="clientName" required>
+        <br>
+        <br>
+        <label for="phoneNumber">Номер телефона:</label>
+        <input type="tel" placeholder="+1 (XX) XXX-XX-XX" name="phoneNumber" id="phoneNumber" required>
+        <br>
+        <p>Выберите процедуру:</p>
+        <input type="radio" value=“1” id = 'first' name=“myRadio”><label for= "first">Оформление бровей краска</label>
+        <br>
+        <input type="radio" value=“2” id = 'second' name=“myRadio”><label for= "second">Оформление бровей хна</label>
+        <br>
+        <input type="radio" value=“3” id = 'third' name=“myRadio”><label for= "third">Ламинирование бровей</label>
+        <br>
+        <input type="radio" value=“4” id = 'fourth' name=“myRadio”><label for= "fourth">Коррекция бровей</label>
+        <br> <br>
+        <label for="masterList">Мастер:</label>
+        <select id="masterList">
+            <option>Елена</option>
+            <option>Александра</option>
+            <option>Анна</option>
+            <option>Виктория</option>
+            <option>Не знаю</option>
+        </select>
+        <p class="comments">*график работы мастеров можно посмотреть <a class = "btn" href = '#'>здесь</a></p>
+        <label for="weekdays">День недели:</label>
+        <select id="weekdays" multiple>
+            <option>Понедельник</option>
+            <option>Вторник</option>
+            <option>Среда</option>
+            <option>Четверг</option>
+            <option>Пятница</option>
+            <option>Суббота</option>
+            <option>Воскресенье</option>
+        </select>
+        <br><br>
+        <label for="time">Время:</label>
+        <input type="text" placeholder="18:00" name="time" id="time">
+        <br><br>
+        <label for="story">Комментарий:</label>
+        <textarea id="story" name="story"></textarea>
+        <br><br>
+        <button type="submit" class="submit">Записаться</button>
     </div>
-
-    <div class="card">
-        <h2>Коррекция бровей</h2>
-        <img class = "image-card" src="https://i.pinimg.com/564x/e5/ae/5b/e5ae5b23391b42c8adfee3c82c5ca6a5.jpg" width = "280" height = "300"  alt="картинка" />
-        <p>Подходит для тех, кому нужно поддерживать уже готовую форму бровей..</p>
-        <p class = "price"><strong>от 300 рублей</strong></p>
-        <div class="btn-keeper">
-            <a class = "btn" href = 'main_page.html'>Записаться</a>
-        </div>
-    </div>
-
-
-    <div class="card">
-        <h2>Ламинирование бровей</h2>
-        <img class = "image-card" src="https://i.pinimg.com/564x/a2/81/e6/a281e6aac93cd6510c2f19df1021ae63.jpg" width = "280" height = "300" alt="картинка" />
-        <p>Подходит как обладательницам непослушных и достаточно жестких волосков бровей,
-            так и тем, кто имеет узкую форму бровей и хочет сделать их шире, придать объем.</p>
-        <p class = "price"><strong>от 1000 рублей</strong></p>
-        <div class="btn-keeper">
-            <a class = "btn" href = 'main_page.html'>Записаться</a>
-        </div>
-    </div>
-
-</div>
-<h2 align="center" >График работы наших мастеров на следующие 3 дня:</h2>
-<table border="1" class = "table">
-    <thead>
-    <tr>
-        <th>День недели</th>
-        <th>Часы работы</th>
-        <th>Мастер</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td rowspan="6">Понедельник</td>
-        <td rowspan="3">08:00 - 13:00</td>
-        <td>Елена</td>
-    </tr>
-    <tr>
-        <td>Виктория</td>
-    </tr>
-    <tr>
-        <td>Александра</td>
-    </tr>
-    <tr>
-        <td rowspan="2">13:30 - 16:00</td>
-        <td>Елена</td>
-    </tr>
-    <tr>
-        <td>Виктория</td>
-    </tr>
-    <tr>
-        <td>16:00 - 20:00</td>
-        <td>Анна</td>
-    </tr>
-    <tr>
-        <td rowspan="7">Вторник</td>
-        <td rowspan="2">08:00 - 12:00</td>
-        <td>Виктория</td>
-    </tr>
-    <tr>
-        <td>Александра</td>
-    </tr>
-    <tr>
-        <td rowspan="3">12:00 - 13:00</td>
-        <td>Виктория</td>
-    </tr>
-    <tr>
-        <td>Александра</td>
-    </tr>
-    <tr>
-        <td>Анна</td>
-    </tr>
-    <tr>
-        <td rowspan="2">13:30 - 20:00</td>
-        <td>Елена</td>
-    </tr>
-    <tr>
-        <td>Анна</td>
-    </tr>
-    <tr>
-        <td rowspan="6">Среда</td>
-        <td rowspan="2">08:00 - 13:00</td>
-        <td>Елена</td>
-    </tr>
-    <tr>
-        <td>Александра</td>
-    </tr>
-    <tr>
-        <td rowspan="3">13:30 - 18:00</td>
-        <td>Елена</td>
-    </tr>
-    <tr>
-        <td>Анна</td>
-    </tr>
-    <tr>
-        <td>Виктория</td>
-    </tr>
-    <tr>
-        <td>18:00 - 20:00</td>
-        <td>Виктория</td>
-    </tr>
-    </tbody>
-</table>
+</form>
 </body>
 </html>
