--- a/form_page.html
+++ b/form_page.html
@@ -21,25 +21,25 @@
         <input type="tel" placeholder="+1 (XX) XXX-XX-XX" name="phoneNumber" id="phoneNumber" required>
         <br>
         <p>Выберите процедуру:</p>
-        <input type="radio" value=“1” id = 'first' name=“myRadio”><label for= "first">Оформление бровей краска</label>
+        <input type="radio" value=“1” id ="first" name="myRadio"><label for= "first">Оформление бровей краска</label>
         <br>
-        <input type="radio" value=“2” id = 'second' name=“myRadio”><label for= "second">Оформление бровей хна</label>
+        <input type="radio" value=“2” id ="second" name="myRadio"><label for= "second">Оформление бровей хна</label>
         <br>
-        <input type="radio" value=“3” id = 'third' name=“myRadio”><label for= "third">Ламинирование бровей</label>
+        <input type="radio" value=“3” id ="third" name="myRadio"><label for= "third">Ламинирование бровей</label>
         <br>
-        <input type="radio" value=“4” id = 'fourth' name=“myRadio”><label for= "fourth">Коррекция бровей</label>
+        <input type="radio" value=“4” id ="fourth" name="myRadio"><label for= "fourth">Коррекция бровей</label>
         <br> <br>
         <label for="masterList">Мастер:</label>
-        <select id="masterList">
+        <select id="masterList" name="master">
             <option>Елена</option>
             <option>Александра</option>
             <option>Анна</option>
             <option>Виктория</option>
             <option>Не знаю</option>
         </select>
-        <p class="comments">*график работы мастеров можно посмотреть <a class = "btn" href = '#'>здесь</a></p>
+        <p class="comments">*график работы мастеров можно посмотреть <a class = "btn" href = "main_page.html">здесь</a></p>
         <label for="weekdays">День недели:</label>
-        <select id="weekdays" multiple>
+        <select id="weekdays" name="weekday" multiple>
             <option>Понедельник</option>
             <option>Вторник</option>
             <option>Среда</option>
