--- a/form_page.html
+++ b/form_page.html
@@ -55,6 +55,10 @@
         <label for="story">Комментарий:</label>
         <textarea id="story" name="story"></textarea>
         <br><br>
+        <input type="checkbox" id="custom-checkbox" name="agreement" required>
+        <label for="custom-checkbox">Я ознакомлен(-а) с <a class="btn" href="http://www.it-lex.ru/usloviya_ispolzovaniya_servisa/obrazec-politiki-konfidencialnosti-2017/">
+            Политикой конфиденциальности</a></label>
+        <br>
         <button type="submit" class="submit">Записаться</button>
     </div>
 </form>
