--- a/main_page.html
+++ b/main_page.html
@@ -10,7 +10,7 @@
     Brow-студия Hollywood Brows
 </h1>
 <hr>
-<div class = 'descr' align = 'center'>
+<div class = "descr" align = "center">
     <h2 align="center" >О нас</h2>
     <p class = "description">Студия бровей Hollywood Brows - это место, где можно получить профессиональный уход и оформление своих бровей.
     В студии работают специалисты, обладающие опытом и навыками в области визажа и бровистики, которые помогут
@@ -30,7 +30,7 @@
         <p>Подходит тем, кто желает изменить тон бровей: сделать поярче или восполнить недостающую густоту..</p>
         <p class = "price"><strong>от 600 рублей</strong></p>
         <div class="btn-keeper">
-            <a class = "btn" href = 'form_page.html'>Записаться</a>
+            <a class = "btn" href = "form_page.html">Записаться</a>
         </div>
     </div>
 
@@ -40,7 +40,7 @@
         <p>Подходит для тех, кому нужно поддерживать уже готовую форму бровей..</p>
         <p class = "price"><strong>от 300 рублей</strong></p>
         <div class="btn-keeper">
-            <a class = "btn" href = 'form_page.html'>Записаться</a>
+            <a class = "btn" href = "form_page.html">Записаться</a>
         </div>
     </div>
 
@@ -52,7 +52,7 @@
             так и тем, кто имеет узкую форму бровей и хочет сделать их шире, придать объем.</p>
         <p class = "price"><strong>от 1000 рублей</strong></p>
         <div class="btn-keeper">
-            <a class = "btn" href = 'form_page.html'>Записаться</a>
+            <a class = "btn" href = "form_page.html">Записаться</a>
         </div>
     </div>
 
